@@ -30,7 +30,7 @@
 .IR <zone>
 |
 .I sign 
-.IR <zone>
+.IR <zone> [ \-\-serial <number> ]
 |
 .I sign \-\-all 
 |
